--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -16,6 +16,7 @@
     "slim/slim": "^4.15",
     "slim/psr7": "^1.6",
     "vlucas/phpdotenv": "^5.6",
-    "dflydev/fig-cookies": "^3.2"
+    "dflydev/fig-cookies": "^3.2",
+    "guzzlehttp/guzzle": "^7.10"
   }
 }
