--- a/.htaccess
+++ b/.htaccess
@@ -11,8 +11,8 @@ RewriteEngine On
 </IfModule>
 
 # ----------------------------------------
-# Rewrite all non-file/non-directory requests to index.php
+# Don't rewrite existing files or directories
 # ----------------------------------------
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ index.php [QSA,L]
+RewriteRule ^ - [QSA,L]
