Update & Fix (v2.1): Dashboard improved dashboard overview, filters, and API response

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ tmp/
 
 # App backend logs (explicit)
 /app/backend/logs/
+/backend/logs/
 
 # ==============================
 # IDE / System Files
